tree-sitter-urd/grammar.js
    source_file: ($) => repeat($._statement_or_newline),

    _statement_or_newline: ($) => choice("\n", $._statement),

    line_comment: (_) => token(prec(-1, seq("#", /[^"\n]*/))),

    // -----------------------------------------------------------------------
    // Literals
    // -----------------------------------------------------------------------

    integer: (_) =>
      token(
        choice(
          /0x[0-9a-fA-F][0-9a-fA-F_]*/,
          /0b[01][01_]*/,
          /0o[0-7][0-7_]*/,
          /[0-9][0-9_]*/,
        ),
      ),

    // Float: requires `.` or exponent to distinguish from integer.
    float: (_) =>
      token(
        choice(
          /(?:[0-9][0-9_]*)?\.([0-9][0-9_]*)(?:[eE][+-]?[0-9][0-9_]*)?/,
          /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
        ),
      ),

    boolean: (_) => choice("true", "false"),

    null: (_) => "null",

    // Dice: NdM or NDM, 1-3 digits each side, e.g. 2d6, 1D20.
    dice: (_) => token(/\d{1,3}[dD]\d{1,3}/),

    // -----------------------------------------------------------------------
    // Strings (multiline, interpolated)
    // -----------------------------------------------------------------------

    string: ($) =>
      seq(
        '"',
        repeat(
          choice($.string_literal_fragment, $.escape_sequence, $.interpolation),
        ),
        '"',
      ),

    // prec(1) beats line_comment's prec(-1) so that when both tokens match
    // the same span of characters (e.g. `#FF0000` right after the opening `"`)
    // the string fragment wins.  The line_comment regex is also restricted to
    // `/[^"\n]*/` so it never produces a *longer* match than this rule.
    string_literal_fragment: (_) => token(prec(1, /[^\\{"]+/)),

    escape_sequence: (_) =>
      token.immediate(
        choice(
          /\\[ntr\\"{}]/,
          /\\x[0-9a-fA-F]{2}/,
          /\\u[0-9a-fA-F]{4}/,
          /\\u\{[0-9a-fA-F]{1,6}\}/,
        ),
      ),

    interpolation: ($) =>
      seq(
        token.immediate("{"),
        $.interpolation_path,
        optional(seq(":", $.format_spec)),
        token.immediate("}"),
      ),

    // Dot-separated identifier path inside `{...}`.
    interpolation_path: (_) =>
      token.immediate(
        /[ \t]*(_*[a-zA-Z][_a-zA-Z0-9]*)(\._*[a-zA-Z][_a-zA-Z0-9]*)*[ \t]*/,
      ),

    // Everything after `:` up to the closing `}`.
    format_spec: (_) => token.immediate(/[^}]+/),

    // -----------------------------------------------------------------------
    // Identifiers
    // -----------------------------------------------------------------------

    // Single-segment identifier (no dots).
    identifier: (_) => /(_*[a-zA-Z][_a-zA-Z0-9]*)/,

    // Dot-chained path, e.g. `module.label` or `Direction.North`.
    identifier_path: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    // The `_` wildcard used in match patterns.
    _expr: ($) =>
      choice(
        $._literal,
        $.identifier_path,
        $.call_expr,
        $.subscript_expr,
        $.list_expr,
        $.map_expr,
        $.paren_expr,
        $.unary_expr,
        $.binary_expr,
        $.end_bang,
        $.todo_bang,
      ),

    // [ e, e, ... ]
    map_expr: ($) =>
      seq(
        ":{",
        commaSep(seq(field("key", $._expr), ":", field("value", $._expr))),
        optional(","),
        "}",
      ),

    // func(arg, ...)
    declaration: ($) =>
      seq(
        field("kind", choice("const", "let", "global")),
        field("name", $.identifier_path),
        optional(field("type", $.type_annotation)),
        "=",
        field("value", $._expr),
      ),

    // -----------------------------------------------------------------------
    // Assignment
    // -----------------------------------------------------------------------
