tree-sitter-urd/test/corpus/literals.txt
================================================================================
Integer decimal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer decimal with underscores
================================================================================

1_000_000

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer hexadecimal
================================================================================

0xFF

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer hexadecimal with underscores
================================================================================

0xFF_AA_00

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer binary
================================================================================

0b1010

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer binary with underscores
================================================================================

0b1111_0000

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer octal
================================================================================

0o77

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer octal with underscores
================================================================================

0o7_7

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Integer zero
================================================================================

0

--------------------------------------------------------------------------------

(source_file
  (integer))

================================================================================
Float with decimal point
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float leading dot
================================================================================

.5

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float with exponent
================================================================================

2.5e2

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float with negative exponent
================================================================================

1.0e-3

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float with positive exponent sign
================================================================================

1.0e+3

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float integer with exponent no dot
================================================================================

100e5

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float with underscores
================================================================================

1_000.0

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (boolean))

================================================================================
Null
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (null))

================================================================================
Dice lowercase d
================================================================================

2d6

--------------------------------------------------------------------------------

(source_file
  (dice))

================================================================================
Dice uppercase D
================================================================================

1D20

--------------------------------------------------------------------------------

(source_file
  (dice))

================================================================================
Dice three digit sides
================================================================================

1d100

--------------------------------------------------------------------------------

(source_file
  (dice))

================================================================================
Dice max count and sides
================================================================================

3d20

--------------------------------------------------------------------------------

(source_file
  (dice))

================================================================================
String empty
================================================================================

""

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
String plain
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)))

================================================================================
String multiline content
================================================================================

"line one
line two"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)))

================================================================================
String escape newline
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)))

================================================================================
String escape tab
================================================================================

"col1\tcol2"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)))

================================================================================
String escape carriage return
================================================================================

"foo\rbar"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)))

================================================================================
String escape backslash
================================================================================

"back\\slash"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)))

================================================================================
String escape double quote
================================================================================

"say \"hi\""

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)
    (escape_sequence)))

================================================================================
String escape open brace
================================================================================

"literal \{ brace"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)))

================================================================================
String escape close brace
================================================================================

"literal \} brace"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)))

================================================================================
String escape hex
================================================================================

"\x41"

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)))

================================================================================
String escape unicode four digit
================================================================================

"\u0042"

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)))

================================================================================
String escape unicode braced
================================================================================

"\u{1F600}"

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)))

================================================================================
String multiple escape sequences
================================================================================

"\n\t\r"

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

================================================================================
String simple interpolation
================================================================================

"hello {name}!"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (interpolation
      (interpolation_path))
    (string_literal_fragment)))

================================================================================
String interpolation dot path
================================================================================

"hello {user.name}!"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (interpolation
      (interpolation_path))
    (string_literal_fragment)))

================================================================================
String interpolation with format spec
================================================================================

"value: {score:03}"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (interpolation
      (interpolation_path)
      (format_spec))
    ))

================================================================================
String interpolation with spaces inside braces
================================================================================

"value: {  gold  }"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (interpolation
      (interpolation_path))))

================================================================================
String multiple interpolations
================================================================================

"{a} and {b}"

--------------------------------------------------------------------------------

(source_file
  (string
    (interpolation
      (interpolation_path))
    (string_literal_fragment)
    (interpolation
      (interpolation_path))))

================================================================================
String interpolation mixed with escapes
================================================================================

"a\nb{c}d"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (escape_sequence)
    (string_literal_fragment)
    (interpolation
      (interpolation_path))
    (string_literal_fragment)))

================================================================================
String interpolation with path and format spec
================================================================================

"hp: {player.health:03}"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)
    (interpolation
      (interpolation_path)
      (format_spec))))

================================================================================
String with hash at start (hex colour)
================================================================================

"#FF0000"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)))

================================================================================
String with hash in middle
================================================================================

"color: #8B0000"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)))

================================================================================
String with multiple hashes
================================================================================

"fg: #FFFFFF bg: #000000"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_literal_fragment)))

================================================================================
String hash in struct field value
================================================================================

const x = :{ color: "#9370DB" }

--------------------------------------------------------------------------------

(source_file
  (declaration
    (identifier_path
      (identifier))
    (map_expr
      (identifier_path
        (identifier))
      (string
        (string_literal_fragment)))))

================================================================================
String hash in let declaration
================================================================================

let bg = "#4B0082"

--------------------------------------------------------------------------------

(source_file
  (declaration
    (identifier_path
      (identifier))
    (string
      (string_literal_fragment))))

================================================================================
Line comment after statement
================================================================================

let x = 1 # this is a comment

--------------------------------------------------------------------------------

(source_file
  (declaration
    (identifier_path
      (identifier))
    (integer))
  (line_comment))

================================================================================
Line comment on its own line
================================================================================

# standalone comment

--------------------------------------------------------------------------------

(source_file
  (line_comment))
